Backend can now make posts of videos and images

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,26 @@
 @tailwind utilities;
 
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #88888881;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #55555575;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
